# biff

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  add-go-dep.sh  calculator.go  go.mod  go.sum  godeps_macro.bzl  main.go  utils.go
calculate/: BUILD.bazel  calculator.go  output.go  query.go
cmd/: BUILD.bazel  calculate.go  compare.go  root.go
compare/: BUILD.bazel  compare.go
protos/: BUILD.bazel
query/: BUILD.bazel  utils.go
