load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_path")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/purkhusid/biff",
    visibility = ["//visibility:public"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "biff",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/purkhusid/biff
# gazelle:build_file_name BUILD.bazel
gazelle(name = "gazelle")

#This target is used for Go IDE tooling
go_path(
    name = "gopath",
    mode = "link",
    deps = [
        "//:biff",
    ],
)
