load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_query_proto",
    srcs = ["query.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_query_go_proto",
    importpath = "github.com/purkhusid/bazel_vcs_differ/protos",
    proto = ":blaze_query_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":blaze_query_go_proto"],
    importpath = "github.com/purkhusid/bazel_vcs_differ/protos",
    visibility = ["//visibility:public"],
)
